--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,14 @@ edition = "2018"
 
 [dependencies]
 
-async-trait = "0.1.51"
 num-traits = "0.2.14"
 log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
 rand = "0.7"
+
+# Tokio, async
+async-trait = "0.1.51"
+tokio = { version = "1.9.0", features = ["full"] }
+tokio-stream = { version = "0.1.7" }
 
 # Crypto et certs
 openssl = { version = "0.10.29", features = ["vendored"] }
@@ -27,3 +31,6 @@ serde_json = "1.0"
 chrono = { version = "0.4.19" }
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
 
+# MongoDB
+mongodb = { version = "1.2.2", default-features = false, features = ["async-std-runtime"] }
+bson = "1.2.3"
