--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 
+async-std = "1.9.0"
 log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
 num-traits = "0.2.14"
 rand = "0.7"
