--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ async-std = "1.9.0"
 log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
 num-traits = "0.2.14"
 rand = "0.7"
+reqwest = "0.11.4"
 tar = { version = "0.4.37" }
 tempfile = { version = "3.2.0" }
 xz2 = { version = "0.1.6", features = ["tokio"] }
@@ -26,7 +27,6 @@ x509-parser = { "version" = "0.10.0" }
 multibase = "0.9.1"
 multicodec = "0.1.0"
 multihash = "0.14.0"
-
 
 # JSON
 serde = { version = "1.0", features = ["derive"] }
