--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ async-std = "1.9.0"
 log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
 num-traits = "0.2.14"
 rand = "0.7"
-reqwest = "0.11.4"
+reqwest = { version = "0.11.4", features = ["default-tls", "rustls-tls", "rustls-tls-manual-roots", "json", "multipart", "stream"] }
 tar = { version = "0.4.37" }
 tempfile = { version = "3.2.0" }
 xz2 = { version = "0.1.6", features = ["tokio"] }
