--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ tempfile = { version = "3.2.0" }
 xz2 = { version = "0.1.6", features = ["tokio"] }
 
 # Tokio, async
+async-recursion = "*"
 async-trait = "0.1.51"
 tokio = { version = "1.9.0", features = ["full"] }
 tokio-stream = { version = "0.1.7" }
