--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ async-std = "1.9.0"
 async-tar = { version = "0.4.2" }
 bytes = { version = "1.1.0" }
 log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
+env_logger = { version = "0.9.0" }
 num-traits = "0.2.14"
 rand = "0.7"
 reqwest = { version = "0.11.4", features = ["default-tls", "rustls-tls", "rustls-tls-manual-roots", "json", "multipart", "stream"] }
