--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ uuid = { version = "0.8.2", features = ["serde", "v4"] }
 
 # MongoDB
 mongodb = { version = "2.0.0", default-features = false, features = ["tokio-runtime", "bson-chrono-0_4"] }
-bson = "2.0.0"
+# bson = "2.0.0"
 
 # RabbitMQ
 lapin = { "version" = "1.8.0" }
