--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ serde_json = "1.0"
 chrono = { version = "0.4.19" }
 url = { version = "2.2.2", features = ["serde"] }
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
+substring = { version = "1.4.5" }
 
 # MongoDB
 mongodb = { version = "2.0.0", default-features = false, features = ["tokio-runtime", "bson-chrono-0_4"] }
