--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,4 +53,4 @@ futures = "0.3.1"
 futures-util = "0.3.16"
 tokio-amqp = { version = "1.0.0" }
 
-redis = "*"
+redis = { version = "0.21.3", features = ["tokio-comp"] }
