--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ x509-parser = { "version" = "0.10.0" }
 multibase = "0.9.1"
 multicodec = "0.1.0"
 multihash = "0.14.0"
+blake2 = "0.10.2"
+chacha20poly1305 = { version= "0.9.0", features = ["stream"] }
 
 # JSON
 serde = { version = "1.0", features = ["derive"] }
