--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ log = { version = "0.4.14", features = ["max_level_trace", "release_max_level_in
 env_logger = { version = "0.9.0" }
 num-traits = "0.2.14"
 rand = "0.8.5"
-reqwest = { version = "0.11.6", features = ["default-tls", "rustls-tls", "rustls-tls-manual-roots", "json", "multipart", "stream"] }
+reqwest = { version = "0.11.6", features = ["default-tls", "rustls-tls", "rustls-tls-manual-roots", "json", "multipart", "stream", "socks"] }
 tempfile = { version = "3.2.0" }
 xz2 = { version = "0.1.7", features = ["tokio"] }
 
