--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ num-traits = "0.2.14"
 rand = "0.8.5"
 reqwest = { version = "0.11.6", features = ["default-tls", "rustls-tls", "rustls-tls-manual-roots", "json", "multipart", "stream", "socks"] }
 tempfile = { version = "3.2.0" }
+flate2 = "1.0.25"
 xz2 = { version = "0.1.7", features = ["tokio"] }
 
 # Tokio, async
