--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ x509-parser = { "version" = "0.14.0" }
 multibase = "0.9.1"
 multicodec = "0.1.0"
 multihash = "0.14.0"
+base64 = "0.21.0"
 base64-url = "2.0.0"
 blake2 = "0.10.2"
 chacha20poly1305 = "0.10.1"
