--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "millegrilles_common_rust"
-version = "2023.8.0"
+version = "2023.8.1"
 edition = "2021"
 
 [dependencies]
@@ -59,5 +59,8 @@ futures-util = "0.3.16"
 tokio-amqp = { version = "1.1.0" }
 
 redis = { version = "0.23.0", features = ["tokio-comp", "tokio-native-tls-comp"] }
+# jwt = { version = "0.16.0", features = ["openssl"] }
+jwt-simple = "0.11.5"
+
 
 #[dev-dependencies]
