--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "millegrilles_common_rust"
-version = "2024.1.1"
+version = "2024.2.0"
 edition = "2021"
 
 [dependencies]
+
+millegrilles_cryptographie = { git = "https://github.com/dugrema/millegrilles_cryptographie.git", branch = "2024.2", features = ["chiffrage"] }
+# millegrilles_cryptographie = { path = "/home/mathieu/RustroverProjects/millegrilles_cryptographie", features = ["chiffrage"] }
 
 async-std = "1.12.0"
 async-tar = { version = "0.4.2" }
