--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ zeroize = { version = "1.6.0", default-features = false }
 # JSON
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde-helpers = { version = "0.1", features = ["serde_json"] }
 
 # Formats
 chrono = { version = "0.4.26", features = ["serde"] }
@@ -54,7 +55,7 @@ uuid = { version = "1.1.2", features = ["serde", "v4"] }
 substring = { version = "1.4.5" }
 
 # MongoDB
-mongodb = { version = "2.6.0", default-features = false, features = ["tokio-runtime", "bson-chrono-0_4"] }
+mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime", "bson-chrono-0_4"] }
 
 # RabbitMQ
 lapin = { "version" = "1.10.0" }
