--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ millegrilles_cryptographie = { git = "https://github.com/dugrema/millegrilles_cr
 async-std = "1.12"
 async-tar = { version = "0.4" }
 bytes = { version = "1.6" }
-log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
+log = { version = "0.4"}
 env_logger = { version = "0.9" }
 num-traits = "0.2"
 rand = "0.8"
