--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,29 +1,29 @@
 [package]
 name = "millegrilles_common_rust"
-version = "2024.3.0"
+version = "2024.4.0"
 edition = "2021"
 
 [dependencies]
 
-millegrilles_cryptographie = { git = "https://github.com/dugrema/millegrilles_cryptographie.git", branch = "2024.3", features = ["chiffrage"] }
+millegrilles_cryptographie = { git = "https://github.com/dugrema/millegrilles_cryptographie.git", branch = "2024.4", features = ["chiffrage"] }
 # millegrilles_cryptographie = { path = "/home/mathieu/RustroverProjects/millegrilles_cryptographie", features = ["chiffrage"] }
 
 async-std = "1.12"
 async-tar = { version = "0.4" }
 bytes = { version = "1.6" }
 log = { version = "0.4"}
-env_logger = { version = "0.9" }
+env_logger = { version = "0.11" }
 num-traits = "0.2"
 rand = "0.8"
-reqwest = { version = "0.11", features = ["default-tls", "rustls-tls", "rustls-tls-manual-roots", "json", "multipart", "stream", "socks"] }
-tempfile = { version = "3.5" }
+reqwest = { version = "0.12", features = ["default-tls", "rustls-tls", "rustls-tls-manual-roots", "json", "multipart", "stream", "socks"] }
+tempfile = { version = "3.10" }
 flate2 = "1.0"
 xz2 = { version = "0.1", features = ["tokio"] }
 hex = "0.4"
 async-compression = { version = "0.4", features = ["tokio", "all-algorithms"] }
 
 # Tokio, async
-async-recursion = "*"
+async-recursion = "1.1"
 async-trait = "0.1"
 tokio = { version = "1.37", features = ["full"] }
 tokio-stream = { version = "0.1" }
@@ -58,12 +58,12 @@ substring = { version = "1.4" }
 mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime", "bson-chrono-0_4"] }
 
 # RabbitMQ
-lapin = { "version" = "1.10" }
+lapin = { "version" = "2.3" }
 futures = "0.3"
 futures-util = "0.3.16"
-tokio-amqp = { version = "1.1" }
+tokio-amqp = { version = "2.0" }
 
-redis = { version = "0.23", features = ["tokio-comp", "tokio-native-tls-comp"] }
+redis = { version = "0.25", features = ["tokio-comp", "tokio-native-tls-comp"] }
 # jwt = { version = "0.16.0", features = ["openssl"] }
 jwt-simple = "0.11"
 
